@@ -1,40 +1,0 @@
-﻿.. This is 'Includes.txt'. It is included at the very top of each and
-   every ReST source file in THIS documentation project (= manual).
-
-.. This files lives at
-   https://github.com/TYPO3-Documentation/TYPO3CMS-Guide-HowToDocument/blob/master/Documentation/Includes.txt
-   Version: 2018-10-16
-
-.. More information about this file:
-   https://docs.typo3.org/typo3cms/HowToDocument/GeneralConventions/DirectoryFilenames.html#includes-txt
-
-.. Define some additional textroles
-   See: https://docs.typo3.org/typo3cms/HowToDocument/WritingReST/InlineCode.html
-
-
-.. ---------
-.. textroles
-.. ---------
-
-.. role:: aspect (emphasis)
-.. role:: html(code)
-.. role:: js(code)
-.. role:: php(code)
-.. role:: rst(code)
-.. role:: sep (strong)
-.. role:: typoscript(code)
-
-.. role:: ts(typoscript)
-   :class: typoscript
-
-.. role:: yaml(code)
-
-.. default-role:: code
-
-.. ---------
-.. highlight
-.. ---------
-
-.. By default, code blocks are php
-
-.. highlight:: php
