@@ -1,20 +1,0 @@
-[general]
-copyright = 2007-2023
-project = External Import Tutorial
-release = 5.1.0
-
-[notify]
-about_new_build = typo3@ideative.ch
-
-[html_theme_options]
-github_branch = master
-github_repository = cobwebch
-project_contact =
-project_discussions =
-project_home = https://github.com/cobwebch/externalimport_tut
-project_issues = https://github.com/cobwebch/externalimport_tut/issues
-project_repository = https://github.com/cobwebch/externalimport_tut
-
-[intersphinx_mapping]
-extimp = http://docs.typo3.org/typo3cms/extensions/external_import/
-t3tca = http://docs.typo3.org/typo3cms/TCAReference/
