@@ -1,0 +1,19 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<guides xmlns="https://www.phpdoc.org/guides" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:schemaLocation="https://www.phpdoc.org/guides ../vendor/phpdocumentor/guides-cli/resources/schema/guides.xsd"
+        links-are-relative="true">
+    <extension class="\T3Docs\Typo3DocsTheme\DependencyInjection\Typo3DocsThemeExtension"
+               project-home="https://github.com/cobwebch/externalimport_tut"
+               project-repository="https://github.com/cobwebch/externalimport_tut"
+               project-issues="https://github.com/cobwebch/externalimport_tut/issues" edit-on-github-branch="master"
+               edit-on-github="cobwebch/externalimport_tut"
+               typo3-core-preferred="stable"
+               interlink-shortcode="cobweb/externalimport_tut"
+    />
+    <project
+            title="External Import Tutorial"
+            release="6.0.0"
+            copyright="2007-2025"
+    />
+    <inventory id="extimp" url="https://docs.typo3.org/p/cobweb/external_import/main/en-us/"/>
+</guides>
